--- a/Array Class/Array Class.vcxproj
+++ b/Array Class/Array Class.vcxproj
@@ -129,6 +129,9 @@
   <ItemGroup>
     <ClInclude Include="array.h" />
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="array.cpp" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
